src/pages/Find/index.module.scss
@mixin screen {
    @media(max-width: 1200px) {
        @content;
    }
}

.Find {
    position: relative;
    background: rgba(245, 245, 245, 0.8);

    .main {
        min-height: calc(100vh - 60px - 60px);
        padding: 5px;
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        align-items: center;

        .title {
            width: calc(100vw - 10px);
            color: #000;
            text-align: center;
            font: normal normal normal/normal sans-serif;
            letter-spacing: 1px;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
            direction: ltr;
        }

        .grid {
            padding: 5px 0;
            width: 80%;

            @include screen() {
                padding: 5px;
                box-sizing: border-box;
                width: 100%;
            }
        }
    }
}

